--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
       "browser": true,
-      "es2021": true
+      "es2021": true,
+      "cypress/globals": true
     },
     "extends": ["eslint:recommended", "prettier"],
     "overrides": [],
@@ -9,5 +10,9 @@
       "ecmaVersion": "latest",
       "sourceType": "module"
     },
-    "rules": {}
+    "plugins": ["cypress"],
+    "rules": {
+      "no-unused-vars": "warn",
+      "no-console": "warn"
+    }
   }
